# portfolio-legal-verify

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_PLAN.md  README.md  SECURITY.md  pyproject.toml
src/legal_verify/: bot.py  config.py  generator.py  main.py  models.py  orchestrator.py  verifier.py
src/legal_verify/prompts/: generator.md  verifier.md
tests/: test_verifier_deterministic.py
